<resources>
    <string name="app_name">Android O</string>
    <string name="cast_away">findViewById() Cast Away</string>
    <string name="picture_in_picture">Picture In Picture</string>
    <string name="notification_channel">Notification Channel</string>
    <string name="font_in_xml">Font in XML</string>
    <string name="downloadable_fonts">Downloadable Fonts</string>
    <string name="autosizing_textviews">Autosizing TextViews</string>
    <string name="safe_browsing">Safe Browsing</string>
    <string name="pinning_shortcuts_and_widgets"><![CDATA[Pinning Shortcuts & Widgets]]></string>
    <string name="custom_data_store">Custom Data Store</string>
    <string name="background_service_execution_limits">Background Service Execution Limits</string>
    <string name="secondary_display">Secondary Display</string>
</resources>
